--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <h2>Use case diagram</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/shark.jpg">
                     </div>
                 </header>
                 <section>
